# notes-server

./: Cargo.toml  Configuration.toml
src/: context.rs  error.rs  log.rs  main.rs  settings.rs  state.rs
src/model/: database.rs  mod.rs
src/model/notes/: mod.rs  notes_models.rs  notes_service.rs
src/model/sessions/: mod.rs  sessions_models.rs  sessions_service.rs
src/model/users/: mod.rs  users_models.rs  users_service.rs
src/web/: auth_middleware.rs  jwt_controller.rs  mod.rs  user_routes.rs
src/web/routes/: mod.rs  notes_routes.rs  users_routes.rs
