[package]
name = "notes-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0", features = ["macros"] }
axum-extra = { version = "0", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"
config = "0"
chrono = "0"
jsonwebtoken = "9"
tap = "1"
time = "0"
async-trait = "0"

[dev-dependencies]
anyhow = "1"
httpc-test = "0"