[package]
name = "notes-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1.39", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
config = "0.14"
chrono = "0.4"
chrono-tz = "0.10"
jsonwebtoken = "9.3"
strum_macros = "0.26"
tap = "1.0"
time = "0.3"
async-trait = "0.1"

[dev-dependencies]
anyhow = "1.0"
httpc-test = "0.1"